--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -19,7 +19,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <!--<a href="help.html" target="_blank">If need help click here</a>-->
+    <a href="help.html" target="_blank">If need help click here</a>
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Youtube Music</h1>
