--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,18 @@
 <!doctype html>
 <html lang="en">
+<style>
+body {
+background-image: url('Background.png');
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+}
+</style>
 <head>
   <meta charset="utf-8">
   <title>YoutubeMusic</title>
   <base href="/">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
